styles.css
/* font-family: 'Roboto', sans-serif;

COLORS
teal - #0fb9b1;
frosted white - rgba(225, 225, 225, .9);
grey - #95a5a6;
red - #ee5253

*/

* {
  font-family: Roboto, sans-serif;
}

html, body {
  width: 100%;
  height: 100%;
}

body {
  background-image: url(./assets/burger-friends.jpg);
  background-size: cover;
  margin: 0;
  padding: 0;
}

article {
  min-height: 100%;
  display: flex;
  flex-direction: column;
  align-items: stretch;

}

button {
  font-size: 12px;
  border-radius: 3px;
  border-style: hidden;
  padding: 5px 10px;
}

/* ~ ~ ~ ~ ~ ~ HEADER ~ ~ ~ ~ ~ ~ */

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0;
  padding: 0 15px;
  background-color: #0fb9b1;
}

#addRecipeBtn:active {
  background-color: #95a5a6;
  color: white;
}


/* ~ ~ ~ ~ ~ ~ MAIN CONTENT ~ ~ ~ ~ ~ ~ */

.bodyContainer {
  display: flex;
  flex-grow: 1;
  justify-content: space-around;
  padding-top: 50px;
}

.leftContainer, .rightContainer {
  display: flex;
  background-color: rgba(225, 225, 225, .9);
  height: 350px;
  width: 25%;
}

/* ~ ~ ~ ~ ~ ~ LEFT CONTAINER ~ ~ ~ ~ ~ ~ */
.leftContainer {
  flex-direction: column;
  justify-content: center;
  padding-left: 3em;
}

.radioBtns {
  padding-bottom: 2em;
  gap: 1em;
}

.dishInput:not(:last-child) {
  margin-bottom: 1em;
}

#letsCookBtn {
  background-color: #0fb9b1;
  max-width: 120px;
  padding: 5px 10px;
  margin-top: -1em;
}

#letsCookBtn:active {
  background-color: #0c918a;
  color: white;
}

/* ~ ~ ~ ~ ~ ~ RIGHT CONTAINER ~ ~ ~ ~ ~ ~ */

.rightContainer {
  justify-content: center;
  align-items: center;
}

#cookPotImg {
  max-width: 100px;
}

.mealContainer {
  height: 250px;
  width: 350px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.suggestionContainer {
  font-style: italic;
  text-align: center;
  padding-top: 70px;
}

#insertDish {
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  margin: 0;
}

#clearBtn {
  align-self: flex-end;
  justify-self: flex-end;
  padding 10px;
}

#clearBtn:active {
  background-color: #95a5a6;
  color: white;
}

/* ~ ~ ~ ~ ~ ~ Footer ~ ~ ~ ~ ~ ~ */
.footer {
  background-color: rgba(225, 225, 225, .9);
  padding: 20px 20px;
  gap: 10px;
}

span + span {
  padding-left: 15px;
}

#confirmAddRecipeBtn {
  background-color: #0fb9b1;
}

#confirmAddRecipeBtn:active {
  background-color: #0c918a;
  color: white;
}
/* ~ ~ ~ ~ ~ ~ Misc ~ ~ ~ ~ ~ ~ */

.hidden {
  display: none;
}

